# fast-api-spimex

./: .gitignore  pyproject.toml
app/: main.py
app/alembic/: env.py
app/api/api_v1/: __init__.py  dependencies.py  spimexs.py
app/api/dependencies/: dependencies.py  parametrs.py  params.py
app/core/: config.py  redis.py
app/core/models/: __init__.py  base.py  db_helper.py  models.py
app/crud/: spimexs.py
app/schemas/: spimex.py
app/services/: cache.py
app/ulils/: errors_handlers.py  time_utils.py
